# hack2026

./: .clauderules  .gitignore  Cargo.toml  README.md  ort_test.rs  test_basic_ort.rs  test_ort.rs  test_registry.rs
.ai/claude/: settings.local.json
.ai/claude/commands/: feature_definition.md  prd_generation.md
.ai/languages/rust/: rules.md
.ai/shared/: context.md  initial-implementation.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
benches/: inference_benchmark.rs
configs/: maskrcnn-12_config.yaml  mobilenetv2-7_config.yaml  ssd-10_config.yaml  yolov2-coco-9_config.yaml  yolov3-10_config.yaml  yolov8n_config.yaml
docs/: README.md  azure-devops-import-summary.md  interactive-feature-definition-assistant-quick-start.md
docs/research/: model-input-spec.md  model-output-spec.md
docs/research/input/: mask-r-cnn.md  retinanet.md  ssd-mobilenetv1.md  ssd.md  tiny-yolov2.md  tiny-yolov3.md  yolov2.md  yolov3.md  yolov4.md  yolov6.md  yolov8.md  yolov9.md
docs/research/output/: mask-r-cnn.md  retinanet.md  ssd-mobilenetv1.md  ssd.md  tiny-yolov2.md  tiny-yolov3.md  yolov2.md  yolov3.md  yolov4.md  yolov6.md  yolov8.md  yolov9.md
docs/templates/: feature-template.md  user-story-template.md
examples/: multi_frame.rs  object_detection_example.rs  real_model_example.rs  simple_demo.rs  single_frame.rs  video_stream.rs
examples/advanced_usage/: Cargo.toml
examples/advanced_usage/src/: main.rs
examples/basic_inference/: Cargo.toml
examples/basic_inference/src/: main.rs
src/: buffer.rs  builder.rs  classifier.rs  core.rs  core_clean.rs  detection.rs  error.rs  input.rs  lib.rs  models.rs  models_test.rs  ort_api_test.rs  ort_test.rs  output.rs  preprocessing.rs  session.rs  types.rs  utils.rs
tests/: basic_test.rs
