[package]
name = "onnx-vision-classifier"
version = "0.1.0"
edition = "2021"
description = "A Rust library for ONNX-based image and video classification"
license = "MIT OR Apache-2.0"
keywords = ["onnx", "computer-vision", "machine-learning", "classification"]

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
ort = "1.15"
image = "0.24"
ndarray = "0.15"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "single_frame"
path = "examples/single_frame.rs"

[[example]]
name = "multi_frame"
path = "examples/multi_frame.rs"

[[example]]
name = "video_stream"
path = "examples/video_stream.rs"