[package]
name = "uocvr"
version = "0.1.0"
edition = "2021"
authors = ["UOCVR Team"]
description = "Universal ONNX Computer Vision Runtime - A unified Rust library for ONNX computer vision model inference"
keywords = ["onnx", "computer-vision", "inference", "machine-learning", "rust"]
categories = ["computer-vision", "science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dwhiteddsoft/hack2026"

[dependencies]
# Core ONNX Runtime
ort = { version = "1.16.3", features = ["download-binaries", "half"] }

# Array and tensor operations
ndarray = "0.15"
half = "2.3"

# Image processing
image = { version = "0.24", features = ["png", "jpeg"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"
env_logger = "0.10"

[[bench]]
name = "inference_benchmark"
harness = false

# Examples that can be run with `cargo run --example <name>`
[[example]]
name = "basic_inference"
path = "examples/basic_inference/src/main.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage/src/main.rs"

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]

[workspace]
members = ["examples/*"]